added all descr

--- a/src/sass/pages/_entry-pages.sass
+++ b/src/sass/pages/_entry-pages.sass
@@ -127,7 +127,7 @@
 			width: 49%
 			min-height: 265px
 			+sm
-				min-height: auto
+				min-height: 0
 			&.is-open
 				float: none
 				width: auto
