--- a/src/templates/Luchiye-predlojeniya-po-pechati-podarkov.jade
+++ b/src/templates/Luchiye-predlojeniya-po-pechati-podarkov.jade
@@ -1,5 +1,6 @@
 ---
-title: Техно-принт
+title: Изготовление интересных сувениров. На майках, футболках, вышивка на ткаях, нанесение на кружки, печать картин на холсте, брелки с фото. Магниты на холодильник, багетная мастерская.
+content: Лучшие и самые интересные предложения по подаркам и сувенирам. Печать на холсте, изготовление багетных рам, фотоальбомов, печать на футболках и майках, печать фото на кружку. Ручные сувенирные значки, брелки, открывашки с фото и логотипами.
 ---
 extends layouts/_layout
 
@@ -8,51 +9,20 @@ block content
 		+e.container.container
 			+e.bar
 				-
-					var breadCrumbsList = [{text: 'Услуги фирмы'}, {text: 'Изготовление подарков', active: 'is-active'}];
+					var breadCrumbsList = [{text: 'Услуги фирмы'}, {text: 'Лучшие предложения', active: 'is-active'}];
 				include components/_breadcrumbs
 
 				+e.bar-title._has-icon
-					+e.SPAN Выбор вариантов подарков
-					+icon('icon-presents', 'page__bar-title-icon')
+					+e.SPAN Популярные и интересные товары
+					+icon('icon-best-choice', 'page__bar-title-icon')
 
 			+e.in
 				include components/_rubric-side
 				+e.main
 					+b.SECTION.sect
-						+b.title-md ВЫ ЗАДУМЫВАЕТЕСЬ ЧТО ПОДАРИТЬ? ИЗГОТОВЛЕНИЕ ПОДАРКОВ ДЛЯ БЛИЗКИХ И КОРПОРАТИВНЫЕ
-						+b.P.sect-descr Если вы рассматриваете варианты подарков для близких, сотрудникам организации или клиентам, то у нас есть хорошие предложения для вас и новые идеи! Мы разработали этот раздел для удобства выбора подарков, собрали наиболее интересные идеи и разместили их здесь, в карточках товара.
-						+b.benefits-list._default
-							+e.title Какие возможности есть у нас для изготовления подарков и самые популярные направления?
-							+e.UL
-								+e.LI
-									+e.STRONG - Печать на кружках, бокалах и другой посуде.
-									= ' '
-									| У нас большое количество готовых эскизов дизайна и заготовок, принимаем любой ваш макет к печати с возможностиями доработки. Корректируем по цветам, делаем бесплатное 3Д предпросмотр макетов.
-								+e.LI
-									+e.STRONG - Вышивка для личных вещей и фирменных подарков.
-									= ' '
-									| На сегодняшний день это довольно редкая, но интересная услуга! Есть варианты новинок дизайна и совершенно «незаезженных» подарков.  Вышивка оказывается зачастую именно тем, что ещё не дарили, чем не успели удивить раньше и что может быть полезным в повседневной жизни!
-								+e.LI
-									+e.STRONG - Печать на холсте и натяжка на подрамники ваших фотографий.
-									= ' '
-									| Можно сделать обрамление фотографий в багет, изготовить картины для интерьера из каталога. У нас вы получите высокое, проверенное качество, полное совпадение по цветам и незначительным оттенкам любых фотографий. Есть услуга модной «мозаичной фотографии». Также предлагаем печать модульных картинных блоков, плакатов, панно.
-								+e.LI
-									+e.STRONG - Подарком может быть печать на любой одежде. В наличии майки, футболки и бейсболки всех цветов.
-									= ' '
-									| Идей вариантов может быть великое множество, начиная от простой фотографии с совместного отдыха, до разработки красивого коллажа или заготовленного оригинального рисунка.
-								+e.LI
-									+e.STRONG - Подарки в виде значков, брелков для ключей, фотомагнитов, открывашек, номерков ГосНомер.
-									= ' '
-									| Для самого редкого подарка-сувенира - найдутся редкие виды заготовок и идей. Это карманные зеркальца, ключники с зеркалами, брелки любовные, значки на магнитах, рассмотрите варианты.
-								+e.LI
-									+e.STRONG - Фотокнига-подарок.
-									= ' '
-									| Интересные варианты сборки фотокниг, предлагаем собственные наработки и неповторимую «манеру» изготовления. Наши фотокниги отличаются технологичностью и новизной технических решений в этой области. Начиная с голографической обложки и заканчивая дизайнерскими картонами при выклейке форзацев.
-								+e.LI
-									+e.STRONG - Идеи и подарки из воздушных шаров с гелием.
-									= ' '
-									| Услуга только для г. Самара. Выбор вариантов подарка связанного с воздушными гелиевыми шариками, креативные решения.
-							+e.P.descr Мы готовы к сотрудничеству и реализации поставленных вами задач, ждём ваших заказов!
+						+b.title-md Лучшие предложения по сувенирам, интересные идеи для подарков
+						+b.P.sect-descr У нас накопились оригинальные идеи, собственные дизайн-макеты по различным тематикам, рассмотрите предложения! Все сувениры изготавливаются исключительно силами нашего предприятия, по отлаженным технологиям и многолетним наработкам. Большую часть из предложенных здесь товаров, вы не встретите в других магазинах конкурирующих организаций.
+						+b.P.sect-descr Будем рады вашим заказам и сотрудничеству!
 
 					+b.product
 						+e.sect._color._has-filter.js-product-filter
