--- a/src/templates/Pechat-Izgotovlenie-znachkov-zakatniye-znachki-brelki-magnity-fotomagnity.jade
+++ b/src/templates/Pechat-Izgotovlenie-znachkov-zakatniye-znachki-brelki-magnity-fotomagnity.jade
@@ -13,7 +13,7 @@ block content
 				include components/_breadcrumbs
 
 				+e.bar-title._has-icon._big-icon
-					+e.SPAN Заказные значки и сувениры
+					+e.SPAN Закатные значки и сувениры
 					+icon('icon-souvenirs', 'page__bar-title-icon')
 
 			+e.in
