--- a/src/templates/Pechat-fotoknig-izgotovlenie-fotoalbomov.jade
+++ b/src/templates/Pechat-fotoknig-izgotovlenie-fotoalbomov.jade
@@ -1,5 +1,6 @@
 ---
-title: Техно-принт
+title: Печать фотокниг и фотоальбомов по новой технологии, голография обложек, специальные свадебные дизайнерские обложки для фотокниг, собственные разработки форматов и материалов от «Техно-Принт»
+content: Изготовление фотоальбомов по новейшей технологии, голография, пластик в страницах, нецарапающиеся обложки. Печать фотокниг на современном оборудовании, обложки от поставщиков мирового производителя и законодателей мод в области фотокниг. Свадебные фотоальбомы со стразами и рисунками, изготовление детских подарочных фотоальбомов.
 ---
 extends layouts/_layout
 
@@ -8,58 +9,49 @@ block content
 		+e.container.container
 			+e.bar
 				-
-					var breadCrumbsList = [{text: 'Машинная вышивка', active: 'is-active'}];
+					var breadCrumbsList = [{text: 'Печать фотокниг и альбомов', active: 'is-active'}];
 				include components/_breadcrumbs
 
 				+e.bar-title._has-icon
-					+e.SPAN Товары и услуги по машинной вышивке
-					+icon('icon-machine', 'page__bar-title-icon')
+					+e.SPAN Фотоальбомы. Печать, изготовление фотокниг
+					+icon('icon-books_page', 'page__bar-title-icon')
 
 			+e.in
 				include components/_rubric-side
 				+e.main
-					+b.SECTION.machine
-						+e.title.title-md ПРЕДСТАВЛЯЕМ ВАМ НОВИНКУ НАШЕГО ПРОИЗВОДСТВА - УСЛУГИ МАШИННОЙ ВЫШИВКИ.
-							br
-							| ЗАГОТОВЛЕН КАТАЛОГ ДИЗАЙНОВ, ИЗГОТОВЛЕНИЕ ВОЗМОЖНО В ВАШЕМ ПРИСУТСТВИИ, ЗА 20-30 МИНУТ!
-						+e.in
-							+e.pic
-								+e.IMG(src='img/content/machine_img.jpg')
-							+e.text
-								+e.P Вышивка производится на наших заготовках или ваших вещах. Выбирайте из предложенных вариантов каталога и образцов дизайна (для многих моделей мы можем произвести незначительную «коррекцию» дизайна и это не потребует дополнительной оплаты). Свяжитесь с нами для помощи в реализации лично ваших интересных идей. Эти услуги, как и остальные предложенные из нашего каталога - недорогие и соответствуют всем нашим традициям конкурентного ценообразовании. Подберём отдельные цены для работ на крое и дружественного сотрудничества с ателье по пошивам.
-								+e.P Вышивка это современный вариант персонализации изделий, будущее модного, только развивающегося направления одежд!
-									+e.BUTTON.more-content-open.more-content-open.js-more-content-open(type='button')
-										+e.SPAN Показать далее
-										+icon('icon-arr-def', 'more-content-open__icon')
-
-							+e.content
-								+e.content-in.js-more-content
-									+e.content-title Мы предлагаем:
-									+e.UL.content-list
-										+e.LI
-											+e.STRONG - Вышивку по дизайну заказчиков
-										+e.LI
-											+e.STRONG - Отрисовка и подготовка программ
-											= ' '
-											| для машинной вышивки по эскизам заказчиков.
-										+e.LI
-											+e.STRONG - Вышивка на наших заготовках одежды и ваших вещах.
-										+e.LI
-											+e.STRONG - Вышивка шевронов, нашивок,
-											= ' '
-											| сами шевронные ткани есть в наличии.
-										+e.LI
-											+e.STRONG - Готовые дизайнерские подарки с вышивкой из нашего каталога
-											= ' '
-											| - свои наработки, только лучшие макеты и идеи для вышивок. Это детские майки с оригинальными вышивками, майки в подарок для взрослых, полотенца с именами, халаты с вышивкой и многие другие заготовки выбирайте, предлагайте свои идеи!
-								+e.BUTTON.more-content-close.more-content-close.js-more-content-close(type='button')
-									+icon('icon-arr-def', 'more-content-close__icon')
+					+b.SECTION.sect
+						+b.title-md ПРЕДСТАВЛЯЕМ ВАМ САМЫЕ ОРИГИНАЛЬНЫЕ ТЕХНОЛОГИЧЕСКИЕ НОВИНКИ И НОВОВВЕДЕНИЯ ПРОИЗВОДСТВА ФОТОКНИГ. МЫ ИСПОЛЬЗУЕМ 3D ОБЛОЖКИ С ГОЛОГРАФИЕЙ, ЗЕРКАЛЬНЫЕ ОБЛОЖКИ, КОЖАНЫЕ МАТЕРИАЛЫ.
+						+b.P.sect-descr Выбор материалов для изготовления фотокниг у нас действительно хорош! По вашему желанию мы можем предложить несколько типов и видов внутренних страниц (пластик, картон различной толщины и цветов).  У нас есть своя, неповторимая технология изготовления обложек и самих фотокниг, альбомы будут выглядеть аккуратно и оригинально. В наших моделях все продумано, от размеров отступов, до реализации дизайнерских разворотов из специального картона.
+						+b.benefits-list._default
+							+e.title Какие возможности и выгоды вы получаете заказав фотокниги у нас?
+							+e.UL
+								+e.LI
+									+e.STRONG - Макетирование фотокниги произведут профессиональные полиграфические дизайнеры,
+									= ' '
+									| с опытом работы от 5 лет.
+								+e.LI
+									+e.STRONG - У вас будет новейшая по технологии фотокнига,
+									= ' '
+									| разработки 2017 года, книги похожей которой нет сейчас ни у ваших знакомых, ни скорее всего у знакомых-знакомых.  Для этого используются современные голографические обложки, нецарапающиеся в ходе эксплуатации спец. покрытия от зарубежных поставщиков, невыгорающие чернила и многие другие приятные мелочи, незначительные на первый взгляд, но придающие очарование конечному продукту в итоговой сборке...
+								+e.LI
+									+e.STRONG - Возможность выбрать обложку заводского изготовления.
+									= ' '
+									| У нас налажены прямые поставки от производителей фотообложек с мировым именем. Новинки вы можете рассмотреть в каталоге. Это обложки из пластиков, варианты с никрустацией, со стразами, «под кожу», специальные свадебные варианты альбомов, на любой вкус! Девяносто процентов этих товаров не представлено другими конкурирующими организациями в сфере фотопечати и изготовления фотокниг...
+								+e.LI
+									+e.STRONG - Оригинальные выклейки форзацев из дизайнерского картона.
+									= ' '
+									| Так как мы изначально занимались полиграфическими услугами, переплётными работами, то постарались привнести технические наработки и в область производства фотокниг. Обратите внимание на возможность дизайнерских форзацев из специальных картонов. Это мягкие, матовые, глянцевые и ячеистые варианты. Есть зеркально-волокнистый вариант форзацев, тоже наше оригинальная находка редкого материала. Собрать коллекцию было не просто, но надеюсь что вы оцените итоговый результат работы.
+								+e.LI
+									+e.STRONG - При всех отличиях и вышеуказанных преимуществах технологий,  стоимость наших фотокниг не дороже,
+									= ' '
+									| а во многом и значительно дешевле стандартных предложений на рынке подобного рода услуг!
+							+e.P.descr Ждём ваших заказов!
 
 					+b.product
 						+e.sect._color._has-filter.js-product-filter
 							+e.sect-title
-								+icon('icon-machine', 'product__sect-icon')
-								+e.SPAN Машинная вышивка / Образцы наших работ
+								//+icon('icon-lovers', 'product__sect-icon')
+								//+e.SPAN Похожие и сопутствующие товары.
 							+e.filter
 								+e.BUTTON.filter-btn(type='button')
 									+icon('icon-filter-down', 'product__filter-icon')
