--- a/src/templates/Pechat-korporativnyx-suvenirov-naneseniye-logotipov.jade
+++ b/src/templates/Pechat-korporativnyx-suvenirov-naneseniye-logotipov.jade
@@ -1,5 +1,6 @@
 ---
-title: Техно-принт
+title: Печать сувениров с логотипами оптом. Нанесение логотипов на майки, кружки, спецодежду - опт. Производство спецодежды
+content: Изготовим сувениры и одежду с логотипами вашей организации. Оптовая печать и нанесение логотипов на майки, футболки, сувенирные кружки.
 ---
 extends layouts/_layout
 
