--- a/src/templates/Pechat-na-maykax-futbolkax-nanesenie-logotipov.jade
+++ b/src/templates/Pechat-na-maykax-futbolkax-nanesenie-logotipov.jade
@@ -1,5 +1,6 @@
 ---
-title: Техно-принт
+title: Печать на майках и футболках, нанесение на одежды. Каталог прикольных футболок и идей для подарка, новинки дизайна маек. Мужские женские, детские, разноцветные майки с печатью. Нанесение логотипов, оптом и в розницу, «Техно-Принт»
+content: Печатаем на любой одежде - качественно! Наносим фото, логотипы, разрабатываем дизайн изображений. Выбирите из нашего каталога эксклюзивные футболки с принтами, присылайте нам ваши идеи для печати. Нанесение принтов на майки, бейсболки, фартуки, спортивную и специальную одежду, «Техно-Принт».
 ---
 extends layouts/_layout
 
@@ -8,58 +9,53 @@ block content
 		+e.container.container
 			+e.bar
 				-
-					var breadCrumbsList = [{text: 'Воздушные шары с гелием', active: 'is-active'}];
+					var breadCrumbsList = [{text: 'Печать на одежде', active: 'is-active'}];
 				include components/_breadcrumbs
 
-				+e.bar-title._has-icon
-					+e.SPAN Гелиевые шарики с доставкой
-					+icon('icon-balloons_sm', 'page__bar-title-icon')
+				+e.bar-title._has-icon._big-icon
+					+e.SPAN Печать на майках, футболках и одежде
+					+icon('icon-shirts', 'page__bar-title-icon')
 
 			+e.in
 				include components/_rubric-side
 				+e.main
-					+b.SECTION.balloons.sect
-						+b.title-md АКЦИЯ НА ВОЗДУШНЫЕ ШАРЫ С ГЕЛИЕМ, ИТАЛЬЯНСКИЕ ШАРИКИ ПО
-							= ' '
-							+e.SPAN.color 39 РУБ
-							| /ШТУКА!
-						+b.title-md НА ВЫБОР ЛЮБЫЕ ЦВЕТА И ТИПЫ ШАРОВ, ЭТО МОГУТ БЫТЬ: КЛАССИЧЕСКИЕ «ПАСТЕЛЬ», «МЕТАЛЛИК», «ПЕРЛАМУТР» ИЛИ НОВИКА ПРОИЗВОДИТЕЛЕЙ - ШАРЫ «КРИСТАЛЛ» И «НЕОН»
-						+b.P.sect-descr Хорошо что вы вышли на эту страничку! Мы вкратце опишем наши предложения, расскажем о типах шаров, современных дизайнерских решениях для подарка и вопросах доставки шаров до двери. Прежде всего хотелось отметить наш богатый ассортимент «воздушной» продукции, многие позиции собраны нами от разрозненных поставщиков, напрямую из регионов, это лучшие заготовки и предложения. Наш метод торговли оптово-складской, принцип ценообразования в точности соответствует этому параметру.  Рассмотрите предлагаемые варианты!
-						+b.benefits-list._default
-							+e.title Какие преимущества вы сможете получить заказав воздушные шары у нас?
-							+e.UL
-								+e.LI
-									+e.STRONG - Действует акция на шары с гелием!
-									= ' '
-									| Настоящие итальянские шарики наполненные гелием мы предлагаем приобрести по 35 рублей за штуку.  Для тех кто не ознакомился с общегородскими ценами сообщим, что средняя рыночная цена на сегодняшний момент составляет 55-70 рублей за вполне китайские варианты. У нас вы получите «итальянские нарядные» шарики по гораздо меньшей стоимости! Эта стоимость соответствует нашему общефирменному ценообразованию, мы торгуем и производим в гораздо больших объёмах чем остальные конкурирующие организации, благодаря потоку заказов удерживаем минимальную наценку!
-								+e.LI
-									+e.STRONG - Стоимость шаров «Металлик», «Перламутр» и «Кристалл»
-									= ' '
-									| не отличается от стоимости обычных матовых шаров типа «Пастель». хотя они всегда имели более приорететный спрос и стоимость на рынке услуг по надуванию шаров гелием...
-								+e.LI
-									+e.STRONG - Возможность выбора шаров с нашего склада, превосходит ассортимет любого уличного ритейлера.
-									= ' '
-									| Мы наладили прямые поставки из дружественных стран участников Шанхайской Организации Сотрудничества, собрали коллекцию различных заготовок, привезли самые оригинальные цветные голографические ленты (новинка!) для воздушных шаров, большинство которых вы не встретите в специализированных магазинах и организациях города. Это произошло благодаря давним связям с партнёрами зарубежных стран по части полиграфического взаимодействия.
-								+e.LI
-									+e.STRONG - Шары надуют для вас и подберут цветовые ленты профессиональные дизайнеры,
-									= ' '
-									| знатоки своего дела с не менее чем пяти летним опытом работы.
-								+e.LI
-									+e.STRONG - Действует акция на шары с гелием!
-									= ' '
-									| Настоящие итальянские шарики наполненные гелием мы предлагаем приобрести по 35 рублей за штуку.  Для тех кто не ознакомился с общегородскими ценами сообщим, что средняя рыночная цена на сегодняшний момент составляет 55-70 рублей за вполне китайские варианты. У нас вы получите «итальянские нарядные» шарики по гораздо меньшей стоимости! Эта стоимость соответствует нашему общефирменному ценообразованию, мы торгуем и производим в гораздо больших объёмах чем остальные конкурирующие организации, благодаря потоку заказов удерживаем минимальную наценку!
-								+e.LI
-									+e.STRONG - И в заключение) Мы разработали фотокнигу - презентацию: «Каталог воздушных шаров».
-									= ' '
-									| Это единственный печатный каталог заготовок шаров, идей и букетов в Самарской области. Фотокнига является полным каталогом по шарам, идеям для подарков с воздушными шарами и одновременно образцом изготовления фотокниги, для общих любых других тематик. Вы можете посмотреть её, выбрать понравившееся моменты, заприметить что-то на будущее. Каталог дизайнерских букетов воздушных шаров есть и на сайте в разделе «Каталог букетов шаров».
-							+e.P.descr Мы создали полный комплект по продажам и услугам доставки шаров с гелием, проработали самые насущные вопросы технологии и удобства выбора заготовок для клиентов, больше добавить к этой тематике на данный момент пока нечего не остаётся. Будем рады вашим заказам и сотрудничеству!
+					+b.SECTION.clothes
+						+e.title.title-md ПЕЧАТЬ НА МАЙКАХ И ЛЮБОЙ ОДЕЖДЕ, НАНЕСЕНИЕ ЛОГОТИПОВ. ПРЕДСТАВЛЯЕМ КАТАЛОГ ГОТОВЫХ ДИЗАЙНОВ. ПЕЧАТЬ НА МАЙКАХ ВОЗМОЖНА ЗА 20 МИНУТ, ПРИ ВАС. ДОСТАВКА В РЕГИОНЫ
+						+e.in
+							+e.col
+								+b.P.sect-descr.clothes__sect-descr Мы профессионально занимаемся нанесением изображений на одежды! Развитию этого направления производства мы посвятили не один год.  Печать на одежде возможно несколькими технологическими методами. В зависимости от назначения, мы подберём для вас самые оптимальные варианты. Это может быть термотрансфер, стойкая сублимационная печать или комбинированная технология - «сольвентная печать + контурная резка». Обращайтесь с расчетами заказов и консультацией. Вы получите исчерпывающую информацию.
+								+b.P.sect-descr.clothes__sect-descr Печать на майках популярная услуга, на сайте мы организовали каталог образцов дизайна и наших работ, смотрите, выбирайте, предлагайте свои варианты дизайнов! У нас доступные цены, предлагаем изготовление от единичного экземпляра, до большого корпоративного тиража.
+								+b.P.sect-descr.clothes__sect-descr Ждём ваших заказов!
 
+							+b.label-block.clothes__label-block.clothes__col
+								+e.title Печать на одежде
+								+e.in
+									+e.item
+										+e.IMG.item-img(src='img/content/shirts-1.jpg')
+										+e.A.item-label(href='#!') Печать логотипов
+									+e.item
+										+e.IMG.item-img(src='img/content/shirts-2.jpg')
+										+e.A.item-label(href='#!') Любая одежда
+									+e.item
+										+e.IMG.item-img(src='img/content/shirts-3.jpg')
+										+e.A.item-label(href='#!') Футболки с дизайном!
+									+e.item
+										+e.item._half
+											+e.IMG.item-img(src='img/content/shirts-4.jpg')
+											+e.A.item-label._top(href='#!') Корпоративные
+										+e.item._double
+												+e.IMG.item-img(src='img/content/shirts-5.jpg')
+										+e.item._double
+											+e.IMG.item-img(src='img/content/shirts-6.jpg')
+											+e.A.item-label(href='#!') Спортивные
+								+e.logo
+									+e.IMG.logo-img(src='img/logo-label.svg')
 
 					+b.product
 						+e.sect._color._has-filter.js-product-filter
 							+e.sect-title
-								//+icon('icon-lovers', 'product__sect-icon')
-								//+e.SPAN Похожие и сопутствующие товары.
+								+icon('icon-shirts', 'product__sect-icon')
+								+e.SPAN Печать на одежде / Образцы наших работ
 							+e.filter
 								+e.BUTTON.filter-btn(type='button')
 									+icon('icon-filter-down', 'product__filter-icon')
