--- a/src/templates/Pechat-na-xolste-natyajka-kartin-na-podramniki-bagetnoye-oformlenie-fotografiy.jade
+++ b/src/templates/Pechat-na-xolste-natyajka-kartin-na-podramniki-bagetnoye-oformlenie-fotografiy.jade
@@ -1,5 +1,6 @@
 ---
-title: Техно-принт
+title: Печать картин на холсте, любые холсты из каталога по индивидуальным заказам! Оформление в багет, картины для дома и офиса. Модульные, мозаичные картины для интерьера, натяжка холстов на подрамники, багетное оформление отпечатанных фотографий, фирма  «Техно-Принт».
+content: Печать на холстах, изготовление картин и подрамников. Большой дизайнерский каталог - выбор из картин великих художников, для интерьера дома и офиса. Изготовление больших фотографий, постеров и репродукций. Печать фото на холсте, предлагаем напечатать лучшие картины на холсте
 ---
 extends layouts/_layout
 
@@ -8,49 +9,54 @@ block content
 		+e.container.container
 			+e.bar
 				-
-					var breadCrumbsList = [{text: 'Печать фотокниг и альбомов', active: 'is-active'}];
+					var breadCrumbsList = [{text: 'Печать картин, багетное оформление', active: 'is-active'}];
 				include components/_breadcrumbs
 
 				+e.bar-title._has-icon
-					+e.SPAN Фотоальбомы. Печать, изготовление фотокниг
-					+icon('icon-books_page', 'page__bar-title-icon')
+					+e.SPAN Холсты, модульные картины и багет
+					+icon('icon-pictures', 'page__bar-title-icon')
 
 			+e.in
 				include components/_rubric-side
 				+e.main
-					+b.SECTION.sect
-						+b.title-md ПРЕДСТАВЛЯЕМ ВАМ САМЫЕ ОРИГИНАЛЬНЫЕ ТЕХНОЛОГИЧЕСКИЕ НОВИНКИ И НОВОВВЕДЕНИЯ ПРОИЗВОДСТВА ФОТОКНИГ. МЫ ИСПОЛЬЗУЕМ 3D ОБЛОЖКИ С ГОЛОГРАФИЕЙ, ЗЕРКАЛЬНЫЕ ОБЛОЖКИ, КОЖАНЫЕ МАТЕРИАЛЫ.
-						+b.P.sect-descr Выбор материалов для изготовления фотокниг у нас действительно хорош! По вашему желанию мы можем предложить несколько типов и видов внутренних страниц (пластик, картон различной толщины и цветов).  У нас есть своя, неповторимая технология изготовления обложек и самих фотокниг, альбомы будут выглядеть аккуратно и оригинально. В наших моделях все продумано, от размеров отступов, до реализации дизайнерских разворотов из специального картона.
+					+b.SECTION.pictures
+						+e.title.title-md Печать фото на холсте, оформление в подрамники и багет, каталог картин художников, акция на изготовление картин!
+						+b.P.sect-descr Печать на холстах как и широкоформатная печать является основным видом нашей деятельности! Мы печатаем водными, пигментными и сольвентными чернилами, на Ваш выбор. Всегда в наличии представлено около двадцати видов материалов для печати, у нас найдется всё широкоформатное, рекламное и большое-красивое. Интерьерная печать на холстах представлена отдельной технологией  с натяжкой на деревянную основу - подрамники.  Кроме самой печати представлены  современные и оригинальные решения в области производства эффектных картин для домашних и офисных интерьеров, читайте о них далее...
+						+e.pics
+							+e.pics-item
+								+e.IMG(src='img/content/pictures-1.jpg')
+								+e.pics-label Фото из &laquo;фотографий&raquo;
+							+e.pics-item
+								+e.IMG(src='img/content/pictures-2.jpg')
+								+e.pics-label Картины художников
+							+e.pics-item
+								+e.IMG(src='img/content/pictures-3.jpg')
+								+e.pics-label._right Оформление в багет
 						+b.benefits-list._default
-							+e.title Какие возможности и выгоды вы получаете заказав фотокниги у нас?
+							+e.title Какие преимущества вы сможете получить заказав печать холстов и подрамников  у нас?
 							+e.UL
 								+e.LI
-									+e.STRONG - Макетирование фотокниги произведут профессиональные полиграфические дизайнеры,
+									+e.STRONG - Мы профессионально занимаемся широкоформатной печатью с 2005 года, рабочее оборудование позволяет печатать сольвентными невыгорающими на свету чернилами,
 									= ' '
-									| с опытом работы от 5 лет.
+									| ваши картины будут долгосрочно используемыми достанутся далёким потомкам, не потеряют внешнего вида! Восьмицветный пигментный плоттер также не оставит равнодушными ценителей настенных интерьерных решений.
 								+e.LI
-									+e.STRONG - У вас будет новейшая по технологии фотокнига,
+									+e.STRONG - Мы одна из немногих печатающих фирм содержащая в своём подразделении багетную мастерскую.
 									= ' '
-									| разработки 2017 года, книги похожей которой нет сейчас ни у ваших знакомых, ни скорее всего у знакомых-знакомых.  Для этого используются современные голографические обложки, нецарапающиеся в ходе эксплуатации спец. покрытия от зарубежных поставщиков, невыгорающие чернила и многие другие приятные мелочи, незначительные на первый взгляд, но придающие очарование конечному продукту в итоговой сборке...
+									| Отпечатанные холсты можно не только натянуть на подрамники, но и оформить в красивый багет. На наших стендах размещено более шестисот образцов красивого багета, на самые изящные вкусы, для любых заказчиков. Опыт в обрамлении картин багетом позволяет качественно исполнить любой подрамник, которые популярны и распространены сейчас повсеместно и стали предлагаться не только багетными мастерскими. Для производства картин на подрамниках у нас существуют собственные оригинальные решения!
 								+e.LI
-									+e.STRONG - Возможность выбрать обложку заводского изготовления.
+									+e.STRONG - Возможность выбрать картины из каталога на сайте и заказать поиск.
 									= ' '
-									| У нас налажены прямые поставки от производителей фотообложек с мировым именем. Новинки вы можете рассмотреть в каталоге. Это обложки из пластиков, варианты с никрустацией, со стразами, «под кожу», специальные свадебные варианты альбомов, на любой вкус! Девяносто процентов этих товаров не представлено другими конкурирующими организациями в сфере фотопечати и изготовления фотокниг...
+									| Просмотрите предложенные варианты интерьерных решений картин на нашем сайте. Поиск любой картинки на заказ, пришлите запрос и мы вышлем вам дополнительные каталоги!
 								+e.LI
-									+e.STRONG - Оригинальные выклейки форзацев из дизайнерского картона.
+									+e.STRONG - Мы не экономим на мелочах и вы получите качественную картину на прочной - максимально подходящей деревянной рейке подрамника.
 									= ' '
-									| Так как мы изначально занимались полиграфическими услугами, переплётными работами, то постарались привнести технические наработки и в область производства фотокниг. Обратите внимание на возможность дизайнерских форзацев из специальных картонов. Это мягкие, матовые, глянцевые и ячеистые варианты. Есть зеркально-волокнистый вариант форзацев, тоже наше оригинальная находка редкого материала. Собрать коллекцию было не просто, но надеюсь что вы оцените итоговый результат работы.
-								+e.LI
-									+e.STRONG - При всех отличиях и вышеуказанных преимуществах технологий,  стоимость наших фотокниг не дороже,
-									= ' '
-									| а во многом и значительно дешевле стандартных предложений на рынке подобного рода услуг!
-							+e.P.descr Ждём ваших заказов!
+									| На картине сзади будут качественные полноценные подвесы и специальная декоративная проволочка (на выбор возможны и другие варианты крепления).
 
 					+b.product
 						+e.sect._color._has-filter.js-product-filter
 							+e.sect-title
-								//+icon('icon-lovers', 'product__sect-icon')
-								//+e.SPAN Похожие и сопутствующие товары.
+								+icon('icon-pictures', 'product__sect-icon')
+								+e.SPAN Печать картин / Образцы наших работ
 							+e.filter
 								+e.BUTTON.filter-btn(type='button')
 									+icon('icon-filter-down', 'product__filter-icon')
