--- a/src/templates/Sharyki-s-geliyem-geleviye-vozdushniye-shary-s-doctavkoy.jade
+++ b/src/templates/Sharyki-s-geliyem-geleviye-vozdushniye-shary-s-doctavkoy.jade
@@ -1,5 +1,6 @@
 ---
-title: Техно-принт
+title: Шары с гелием - доставка воздушных гелиевых шаров по акции! Воздушные шарики, букеты из шаров на праздники. Фольгированные шары цифры на дни рождения, г. Самара.
+content: Надувание шаров гелием, продажа воздушных гелиевых шаров, доставка шаров на мероприятия и дни роджений. Интеренет магазин идей для подарков с шарами, выбор из 50 идей букетов гелиевых шариков, продажа фольгированных шаров, акция на шары «Металлик».
 ---
 extends layouts/_layout
 
@@ -8,20 +9,52 @@ block content
 		+e.container.container
 			+e.bar
 				-
-					var breadCrumbsList = [{text: 'Услуги фирмы'}, {text: 'Лучшие предложения', active: 'is-active'}];
+					var breadCrumbsList = [{text: 'Воздушные шары с гелием', active: 'is-active'}];
 				include components/_breadcrumbs
 
 				+e.bar-title._has-icon
-					+e.SPAN Популярные и интересные товары
-					+icon('icon-best-choice', 'page__bar-title-icon')
+					+e.SPAN Гелиевые шарики с доставкой
+					+icon('icon-balloons_sm', 'page__bar-title-icon')
 
 			+e.in
 				include components/_rubric-side
 				+e.main
-					+b.SECTION.sect
-						+b.title-md Лучшие предложения по сувенирам, интересные идеи для подарков
-						+b.P.sect-descr У нас накопились оригинальные идеи, собственные дизайн-макеты по различным тематикам, рассмотрите предложения! Все сувениры изготавливаются исключительно силами нашего предприятия, по отлаженным технологиям и многолетним наработкам. Большую часть из предложенных здесь товаров, вы не встретите в других магазинах конкурирующих организаций.
-						+b.P.sect-descr Будем рады вашим заказам и сотрудничеству!
+					+b.SECTION.balloons.sect
+						+b.title-md АКЦИЯ НА ВОЗДУШНЫЕ ШАРЫ С ГЕЛИЕМ, ИТАЛЬЯНСКИЕ ШАРИКИ ПО
+							= ' '
+							+e.SPAN.color 39 РУБ
+							| /ШТУКА!
+						+b.title-md НА ВЫБОР ЛЮБЫЕ ЦВЕТА И ТИПЫ ШАРОВ, ЭТО МОГУТ БЫТЬ: КЛАССИЧЕСКИЕ «ПАСТЕЛЬ», «МЕТАЛЛИК», «ПЕРЛАМУТР» ИЛИ НОВИКА ПРОИЗВОДИТЕЛЕЙ - ШАРЫ «КРИСТАЛЛ» И «НЕОН»
+						+b.P.sect-descr Хорошо что вы вышли на эту страничку! Мы вкратце опишем наши предложения, расскажем о типах шаров, современных дизайнерских решениях для подарка и вопросах доставки шаров до двери. Прежде всего хотелось отметить наш богатый ассортимент «воздушной» продукции, многие позиции собраны нами от разрозненных поставщиков, напрямую из регионов, это лучшие заготовки и предложения. Наш метод торговли оптово-складской, принцип ценообразования в точности соответствует этому параметру.  Рассмотрите предлагаемые варианты!
+						+b.benefits-list._default
+							+e.title Какие преимущества вы сможете получить заказав воздушные шары у нас?
+							+e.UL
+								+e.LI
+									+e.STRONG - Действует акция на шары с гелием!
+									= ' '
+									| Настоящие итальянские шарики наполненные гелием мы предлагаем приобрести по 35 рублей за штуку.  Для тех кто не ознакомился с общегородскими ценами сообщим, что средняя рыночная цена на сегодняшний момент составляет 55-70 рублей за вполне китайские варианты. У нас вы получите «итальянские нарядные» шарики по гораздо меньшей стоимости! Эта стоимость соответствует нашему общефирменному ценообразованию, мы торгуем и производим в гораздо больших объёмах чем остальные конкурирующие организации, благодаря потоку заказов удерживаем минимальную наценку!
+								+e.LI
+									+e.STRONG - Стоимость шаров «Металлик», «Перламутр» и «Кристалл»
+									= ' '
+									| не отличается от стоимости обычных матовых шаров типа «Пастель». хотя они всегда имели более приорететный спрос и стоимость на рынке услуг по надуванию шаров гелием...
+								+e.LI
+									+e.STRONG - Возможность выбора шаров с нашего склада, превосходит ассортимет любого уличного ритейлера.
+									= ' '
+									| Мы наладили прямые поставки из дружественных стран участников Шанхайской Организации Сотрудничества, собрали коллекцию различных заготовок, привезли самые оригинальные цветные голографические ленты (новинка!) для воздушных шаров, большинство которых вы не встретите в специализированных магазинах и организациях города. Это произошло благодаря давним связям с партнёрами зарубежных стран по части полиграфического взаимодействия.
+								+e.LI
+									+e.STRONG - Шары надуют для вас и подберут цветовые ленты профессиональные дизайнеры,
+									= ' '
+									| знатоки своего дела с не менее чем пяти летним опытом работы.
+								+e.LI
+									+e.STRONG - Действует акция на шары с гелием!
+									= ' '
+									| Настоящие итальянские шарики наполненные гелием мы предлагаем приобрести по 35 рублей за штуку.  Для тех кто не ознакомился с общегородскими ценами сообщим, что средняя рыночная цена на сегодняшний момент составляет 55-70 рублей за вполне китайские варианты. У нас вы получите «итальянские нарядные» шарики по гораздо меньшей стоимости! Эта стоимость соответствует нашему общефирменному ценообразованию, мы торгуем и производим в гораздо больших объёмах чем остальные конкурирующие организации, благодаря потоку заказов удерживаем минимальную наценку!
+								+e.LI
+									+e.STRONG - И в заключение) Мы разработали фотокнигу - презентацию: «Каталог воздушных шаров».
+									= ' '
+									| Это единственный печатный каталог заготовок шаров, идей и букетов в Самарской области. Фотокнига является полным каталогом по шарам, идеям для подарков с воздушными шарами и одновременно образцом изготовления фотокниги, для общих любых других тематик. Вы можете посмотреть её, выбрать понравившееся моменты, заприметить что-то на будущее. Каталог дизайнерских букетов воздушных шаров есть и на сайте в разделе «Каталог букетов шаров».
+							+e.P.descr Мы создали полный комплект по продажам и услугам доставки шаров с гелием, проработали самые насущные вопросы технологии и удобства выбора заготовок для клиентов, больше добавить к этой тематике на данный момент пока нечего не остаётся. Будем рады вашим заказам и сотрудничеству!
+
 
 					+b.product
 						+e.sect._color._has-filter.js-product-filter
