--- a/src/templates/contacts-page.jade
+++ b/src/templates/contacts-page.jade
@@ -19,7 +19,7 @@ block content
 				+e.main
 					+b.contacts._default
 						+e.in
-							+e.ADDRESS.info
+							+e.info
 								+e.info-data
 									+e.info-title АДРЕСА И КОНТАКТЫ
 									+e.info-item
@@ -44,7 +44,7 @@ block content
 								+e.info-map
 									+e.IFRAME(src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2389.978980134671!2d50.10050231616926!3d53.200293179948694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x41661e415581f6b1%3A0x9a1064c111216ab7!2z0KLQtdGF0L3Qvi3Qn9GA0LjQvdGC!5e0!3m2!1suk!2sua!4v1492587717170', frameborder='0', style='border:0', allowfullscreen='')
 
-							+e.ADDRESS.info
+							+e.info
 								+e.info-data
 									+e.info-item
 										+e.info-text
