--- a/src/templates/home-page.jade
+++ b/src/templates/home-page.jade
@@ -1,5 +1,6 @@
 ---
-title: Техно-принт
+title: Сувенирно-полиграфическая компания «Техно-Принт». Производство от брелков до машинной вышивки! Мы специализируемся на подарочной продукции, печати на одежде, нанесению логотипов и номеров на спортивную  форму, изготовлении значков, фотомагнитов, печати на холстах и изготовлении картин. Работаем оптом и в розницу. Изготавливаем фотокниги, печатаем на кружках, майках, футболках. Наносим любые изображения и логотипы с вышивкой на одежду, это могут быть кепки,  спецодежда. Новинка нашего производства - вышивка на полотенцах, халатах, крое и почти любой ткани, всё можно заказать дистанционно в нашем интернет-магазине.
+content: Мы специализируемся на изготовлении оригинальных подарков и печати логотипов. Печати на майках по нескольким видам технологии, печать на сувенирных кружках, толстовках, вертовках. Изготовим оригинальные фотокниги с голографическими обложками. Наносим логотипы  на одежду по оптовым ценам. Изготавливаем закатные значки, брелки и магнитики на холодильник, печатаем постеры, холсты и картины с багетными рамами.
 ---
 extends layouts/_layout
 
