--- a/src/templates/pechat-na-kruzhkah-naneseniye-na-kruzhkhi-i_posudu.jade
+++ b/src/templates/pechat-na-kruzhkah-naneseniye-na-kruzhkhi-i_posudu.jade
@@ -1,5 +1,6 @@
 ---
-title: Техно-принт
+title: Изготовление сувенирных кружек - фирменный каталог с дизайн-макетами от производителя! Оптово-розничное производство кружек, бокалов, тарелок с принтами, от «Техно-Принт»
+content: Производим печать на кружках, бокалах, кофейных наборах. Более 40 видов заготовок, выбор из актуального каталога. Каталог подарочных дизайн-макетов на кружки, подарки в виде посуды с прикольными принтами и вашими логотипами.
 ---
 extends layouts/_layout
 
