--- a/src/templates/Podarki-blizkim-i-korporativniye-suveniry.jade
+++ b/src/templates/Podarki-blizkim-i-korporativniye-suveniry.jade
@@ -1,5 +1,6 @@
 ---
-title: Техно-принт
+title: Изготовление модных, стильных и практичных подарков близким и корпоративные. Памятные сувениры,  декоративные подарки для интерьера, оригинальные одежды с вышивкой, недорого, можно под Ваш собственный дизайн
+content: Изготовление подарков и сувениров по новым технологиям - такие вам понравятся! Задумались что подарить близким, своим сотрудникам или клиентам организации? У нас есть предложения.
 ---
 extends layouts/_layout
 
@@ -8,53 +9,57 @@ block content
 		+e.container.container
 			+e.bar
 				-
-					var breadCrumbsList = [{text: 'Печать на одежде', active: 'is-active'}];
+					var breadCrumbsList = [{text: 'Услуги фирмы'}, {text: 'Изготовление подарков', active: 'is-active'}];
 				include components/_breadcrumbs
 
-				+e.bar-title._has-icon._big-icon
-					+e.SPAN Печать на майках, футболках и одежде
-					+icon('icon-shirts', 'page__bar-title-icon')
+				+e.bar-title._has-icon
+					+e.SPAN Выбор вариантов подарков
+					+icon('icon-presents', 'page__bar-title-icon')
 
 			+e.in
 				include components/_rubric-side
 				+e.main
-					+b.SECTION.clothes
-						+e.title.title-md ПЕЧАТЬ НА МАЙКАХ И ЛЮБОЙ ОДЕЖДЕ, НАНЕСЕНИЕ ЛОГОТИПОВ. ПРЕДСТАВЛЯЕМ КАТАЛОГ ГОТОВЫХ ДИЗАЙНОВ. ПЕЧАТЬ НА МАЙКАХ ВОЗМОЖНА ЗА 20 МИНУТ, ПРИ ВАС. ДОСТАВКА В РЕГИОНЫ
-						+e.in
-							+e.col
-								+b.P.sect-descr.clothes__sect-descr Мы профессионально занимаемся нанесением изображений на одежды! Развитию этого направления производства мы посвятили не один год.  Печать на одежде возможно несколькими технологическими методами. В зависимости от назначения, мы подберём для вас самые оптимальные варианты. Это может быть термотрансфер, стойкая сублимационная печать или комбинированная технология - «сольвентная печать + контурная резка». Обращайтесь с расчетами заказов и консультацией. Вы получите исчерпывающую информацию.
-								+b.P.sect-descr.clothes__sect-descr Печать на майках популярная услуга, на сайте мы организовали каталог образцов дизайна и наших работ, смотрите, выбирайте, предлагайте свои варианты дизайнов! У нас доступные цены, предлагаем изготовление от единичного экземпляра, до большого корпоративного тиража.
-								+b.P.sect-descr.clothes__sect-descr Ждём ваших заказов!
-
-							+b.label-block.clothes__label-block.clothes__col
-								+e.title Печать на одежде
-								+e.in
-									+e.item
-										+e.IMG.item-img(src='img/content/shirts-1.jpg')
-										+e.A.item-label(href='#!') Печать логотипов
-									+e.item
-										+e.IMG.item-img(src='img/content/shirts-2.jpg')
-										+e.A.item-label(href='#!') Любая одежда
-									+e.item
-										+e.IMG.item-img(src='img/content/shirts-3.jpg')
-										+e.A.item-label(href='#!') Футболки с дизайном!
-									+e.item
-										+e.item._half
-											+e.IMG.item-img(src='img/content/shirts-4.jpg')
-											+e.A.item-label._top(href='#!') Корпоративные
-										+e.item._double
-												+e.IMG.item-img(src='img/content/shirts-5.jpg')
-										+e.item._double
-											+e.IMG.item-img(src='img/content/shirts-6.jpg')
-											+e.A.item-label(href='#!') Спортивные
-								+e.logo
-									+e.IMG.logo-img(src='img/logo-label.svg')
+					+b.SECTION.sect
+						+b.title-md ВЫ ЗАДУМЫВАЕТЕСЬ ЧТО ПОДАРИТЬ? ИЗГОТОВЛЕНИЕ ПОДАРКОВ ДЛЯ БЛИЗКИХ И КОРПОРАТИВНЫЕ
+						+b.P.sect-descr Если вы рассматриваете варианты подарков для близких, сотрудникам организации или клиентам, то у нас есть хорошие предложения для вас и новые идеи! Мы разработали этот раздел для удобства выбора подарков, собрали наиболее интересные идеи и разместили их здесь, в карточках товара.
+						+b.benefits-list._default
+							+e.title Какие возможности есть у нас для изготовления подарков и самые популярные направления?
+							+e.UL
+								+e.LI
+									+e.STRONG - Печать на кружках, бокалах и другой посуде.
+									= ' '
+									| У нас большое количество готовых эскизов дизайна и заготовок, принимаем любой ваш макет к печати с возможностиями доработки. Корректируем по цветам, делаем бесплатное 3Д предпросмотр макетов.
+								+e.LI
+									+e.STRONG - Вышивка для личных вещей и фирменных подарков.
+									= ' '
+									| На сегодняшний день это довольно редкая, но интересная услуга! Есть варианты новинок дизайна и совершенно «незаезженных» подарков.  Вышивка оказывается зачастую именно тем, что ещё не дарили, чем не успели удивить раньше и что может быть полезным в повседневной жизни!
+								+e.LI
+									+e.STRONG - Печать на холсте и натяжка на подрамники ваших фотографий.
+									= ' '
+									| Можно сделать обрамление фотографий в багет, изготовить картины для интерьера из каталога. У нас вы получите высокое, проверенное качество, полное совпадение по цветам и незначительным оттенкам любых фотографий. Есть услуга модной «мозаичной фотографии». Также предлагаем печать модульных картинных блоков, плакатов, панно.
+								+e.LI
+									+e.STRONG - Подарком может быть печать на любой одежде. В наличии майки, футболки и бейсболки всех цветов.
+									= ' '
+									| Идей вариантов может быть великое множество, начиная от простой фотографии с совместного отдыха, до разработки красивого коллажа или заготовленного оригинального рисунка.
+								+e.LI
+									+e.STRONG - Подарки в виде значков, брелков для ключей, фотомагнитов, открывашек, номерков ГосНомер.
+									= ' '
+									| Для самого редкого подарка-сувенира - найдутся редкие виды заготовок и идей. Это карманные зеркальца, ключники с зеркалами, брелки любовные, значки на магнитах, рассмотрите варианты.
+								+e.LI
+									+e.STRONG - Фотокнига-подарок.
+									= ' '
+									| Интересные варианты сборки фотокниг, предлагаем собственные наработки и неповторимую «манеру» изготовления. Наши фотокниги отличаются технологичностью и новизной технических решений в этой области. Начиная с голографической обложки и заканчивая дизайнерскими картонами при выклейке форзацев.
+								+e.LI
+									+e.STRONG - Идеи и подарки из воздушных шаров с гелием.
+									= ' '
+									| Услуга только для г. Самара. Выбор вариантов подарка связанного с воздушными гелиевыми шариками, креативные решения.
+							+e.P.descr Мы готовы к сотрудничеству и реализации поставленных вами задач, ждём ваших заказов!
 
 					+b.product
 						+e.sect._color._has-filter.js-product-filter
 							+e.sect-title
-								+icon('icon-shirts', 'product__sect-icon')
-								+e.SPAN Печать на одежде / Образцы наших работ
+								//+icon('icon-lovers', 'product__sect-icon')
+								//+e.SPAN Похожие и сопутствующие товары.
 							+e.filter
 								+e.BUTTON.filter-btn(type='button')
 									+icon('icon-filter-down', 'product__filter-icon')
