--- a/src/templates/Vishevka-mashinnaya-shevronov-logotipov-uslugi-vishevki.jade
+++ b/src/templates/Vishevka-mashinnaya-shevronov-logotipov-uslugi-vishevki.jade
@@ -1,5 +1,6 @@
 ---
-title: Техно-принт
+title: Вышивка для подарков близким и корпоративные, товары с заказной вышивкой. Изготовление, каталог дизайнов вышивок. Вышивка на заказ на полотенца, халаты, шевроны и нашивки. Вышивальные работы на крое и готовой одежде, “Техно-Принт”
+content: Эксклюзивные товары нашего интернет-магазина с машинной вышивкой на тканях. Дизайны вышивок, идеи для подарочной и корпоративной вышивки, каталог товаров с машинной вышивкой от «Техно-Принт». Вышивка на футболках и любой спецодежде. Доставка в регионы России
 ---
 extends layouts/_layout
 
@@ -8,54 +9,58 @@ block content
 		+e.container.container
 			+e.bar
 				-
-					var breadCrumbsList = [{text: 'Печать картин, багетное оформление', active: 'is-active'}];
+					var breadCrumbsList = [{text: 'Машинная вышивка', active: 'is-active'}];
 				include components/_breadcrumbs
 
 				+e.bar-title._has-icon
-					+e.SPAN Холсты, модульные картины и багет
-					+icon('icon-pictures', 'page__bar-title-icon')
+					+e.SPAN Товары и услуги по машинной вышивке
+					+icon('icon-machine', 'page__bar-title-icon')
 
 			+e.in
 				include components/_rubric-side
 				+e.main
-					+b.SECTION.pictures
-						+e.title.title-md Печать фото на холсте, оформление в подрамники и багет, каталог картин художников, акция на изготовление картин!
-						+b.P.sect-descr Печать на холстах как и широкоформатная печать является основным видом нашей деятельности! Мы печатаем водными, пигментными и сольвентными чернилами, на Ваш выбор. Всегда в наличии представлено около двадцати видов материалов для печати, у нас найдется всё широкоформатное, рекламное и большое-красивое. Интерьерная печать на холстах представлена отдельной технологией  с натяжкой на деревянную основу - подрамники.  Кроме самой печати представлены  современные и оригинальные решения в области производства эффектных картин для домашних и офисных интерьеров, читайте о них далее...
-						+e.pics
-							+e.pics-item
-								+e.IMG(src='img/content/pictures-1.jpg')
-								+e.pics-label Фото из &laquo;фотографий&raquo;
-							+e.pics-item
-								+e.IMG(src='img/content/pictures-2.jpg')
-								+e.pics-label Картины художников
-							+e.pics-item
-								+e.IMG(src='img/content/pictures-3.jpg')
-								+e.pics-label._right Оформление в багет
-						+b.benefits-list._default
-							+e.title Какие преимущества вы сможете получить заказав печать холстов и подрамников  у нас?
-							+e.UL
-								+e.LI
-									+e.STRONG - Мы профессионально занимаемся широкоформатной печатью с 2005 года, рабочее оборудование позволяет печатать сольвентными невыгорающими на свету чернилами,
-									= ' '
-									| ваши картины будут долгосрочно используемыми достанутся далёким потомкам, не потеряют внешнего вида! Восьмицветный пигментный плоттер также не оставит равнодушными ценителей настенных интерьерных решений.
-								+e.LI
-									+e.STRONG - Мы одна из немногих печатающих фирм содержащая в своём подразделении багетную мастерскую.
-									= ' '
-									| Отпечатанные холсты можно не только натянуть на подрамники, но и оформить в красивый багет. На наших стендах размещено более шестисот образцов красивого багета, на самые изящные вкусы, для любых заказчиков. Опыт в обрамлении картин багетом позволяет качественно исполнить любой подрамник, которые популярны и распространены сейчас повсеместно и стали предлагаться не только багетными мастерскими. Для производства картин на подрамниках у нас существуют собственные оригинальные решения!
-								+e.LI
-									+e.STRONG - Возможность выбрать картины из каталога на сайте и заказать поиск.
-									= ' '
-									| Просмотрите предложенные варианты интерьерных решений картин на нашем сайте. Поиск любой картинки на заказ, пришлите запрос и мы вышлем вам дополнительные каталоги!
-								+e.LI
-									+e.STRONG - Мы не экономим на мелочах и вы получите качественную картину на прочной - максимально подходящей деревянной рейке подрамника.
-									= ' '
-									| На картине сзади будут качественные полноценные подвесы и специальная декоративная проволочка (на выбор возможны и другие варианты крепления).
+					+b.SECTION.machine
+						+e.title.title-md ПРЕДСТАВЛЯЕМ ВАМ НОВИНКУ НАШЕГО ПРОИЗВОДСТВА - УСЛУГИ МАШИННОЙ ВЫШИВКИ.
+							br
+							| ЗАГОТОВЛЕН КАТАЛОГ ДИЗАЙНОВ, ИЗГОТОВЛЕНИЕ ВОЗМОЖНО В ВАШЕМ ПРИСУТСТВИИ, ЗА 20-30 МИНУТ!
+						+e.in
+							+e.pic
+								+e.IMG(src='img/content/machine_img.jpg')
+							+e.text
+								+e.P Вышивка производится на наших заготовках или ваших вещах. Выбирайте из предложенных вариантов каталога и образцов дизайна (для многих моделей мы можем произвести незначительную «коррекцию» дизайна и это не потребует дополнительной оплаты). Свяжитесь с нами для помощи в реализации лично ваших интересных идей. Эти услуги, как и остальные предложенные из нашего каталога - недорогие и соответствуют всем нашим традициям конкурентного ценообразовании. Подберём отдельные цены для работ на крое и дружественного сотрудничества с ателье по пошивам.
+								+e.P Вышивка это современный вариант персонализации изделий, будущее модного, только развивающегося направления одежд!
+									+e.BUTTON.more-content-open.more-content-open.js-more-content-open(type='button')
+										+e.SPAN Показать далее
+										+icon('icon-arr-def', 'more-content-open__icon')
+
+							+e.content
+								+e.content-in.js-more-content
+									+e.content-title Мы предлагаем:
+									+e.UL.content-list
+										+e.LI
+											+e.STRONG - Вышивку по дизайну заказчиков
+										+e.LI
+											+e.STRONG - Отрисовка и подготовка программ
+											= ' '
+											| для машинной вышивки по эскизам заказчиков.
+										+e.LI
+											+e.STRONG - Вышивка на наших заготовках одежды и ваших вещах.
+										+e.LI
+											+e.STRONG - Вышивка шевронов, нашивок,
+											= ' '
+											| сами шевронные ткани есть в наличии.
+										+e.LI
+											+e.STRONG - Готовые дизайнерские подарки с вышивкой из нашего каталога
+											= ' '
+											| - свои наработки, только лучшие макеты и идеи для вышивок. Это детские майки с оригинальными вышивками, майки в подарок для взрослых, полотенца с именами, халаты с вышивкой и многие другие заготовки выбирайте, предлагайте свои идеи!
+								+e.BUTTON.more-content-close.more-content-close.js-more-content-close(type='button')
+									+icon('icon-arr-def', 'more-content-close__icon')
 
 					+b.product
 						+e.sect._color._has-filter.js-product-filter
 							+e.sect-title
-								+icon('icon-pictures', 'product__sect-icon')
-								+e.SPAN Печать картин / Образцы наших работ
+								+icon('icon-machine', 'product__sect-icon')
+								+e.SPAN Машинная вышивка / Образцы наших работ
 							+e.filter
 								+e.BUTTON.filter-btn(type='button')
 									+icon('icon-filter-down', 'product__filter-icon')
